your message here

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,6 @@
   "redirects": [
     { "source": "/", "destination": "/prompt_enhancer/index.html", "permanent": false },
     { "source": "/index.html", "destination": "/prompt_enhancer/index.html", "permanent": false },
-    { "source": "/examples.html", "destination": "/prompt_enhancer/examples.html", "permanent": false },
-    { "source": "/settings.html", "destination": "/prompt_enhancer/settings.html", "permanent": false },
-    { "source": "/pricing", "destination": "/prompt_enhancer/pricing.html", "permanent": false },
-    { "source": "/pricing.html", "destination": "/prompt_enhancer/pricing.html", "permanent": false }
+    { "source": "/settings.html", "destination": "/prompt_enhancer/settings.html", "permanent": false }
   ]
 }
