--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.511.0",
-    "next": "15.3.4",
+    "next": "^15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
