--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "validate": "pnpm lint && pnpm typecheck && pnpm build"
+  },
+  "engines": {
+    "node": ">=18.18.0",
+    "pnpm": ">=10"
   },
   "dependencies": {
     "framer-motion": "^11.18.2",
@@ -22,8 +27,8 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "16.1.6",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.12",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
